@@ -34,7 +34,8 @@ org.apache.tools.ant.gui.XMLFileFilter.description=XML Files
 
 org.apache.tools.ant.gui.command.LoadFileCmd.noFile=The file "{0}" was not found.
 org.apache.tools.ant.gui.command.LoadFileCmd.loadError=The file "{0}" could not be loaded.
-org.apache.tools.ant.gui.command.DisplayErrorCmd.title=Error...
+org.apache.tools.ant.gui.command.DisplayErrorCmd.title=Antidote Error...
+org.apache.tools.ant.gui.command.DisplayErrorCmd.expand=Details >>
 
 org.apache.tools.ant.gui.command.SaveCmd.saveError=Could not save to "{0}".
 org.apache.tools.ant.gui.command.SaveCmd.noProject=No project to save.
